--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>black board</title>
+    <script type="module" crossorigin src="/blackboard/assets/index.1c11d347.js"></script>
+    <link rel="stylesheet" href="/blackboard/assets/index.d66455ed.css">
   </head>
   <body>
     <canvas id="canvas" width="600" height="500"></canvas>
-    <script type="module" src="/src/main.ts"></script>
+    
   </body>
 </html>
